--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,15 @@
-APP_NAME=Laravel
+APP_NAME="Restaurant API"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_TIMEZONE=UTC
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
@@ -20,14 +19,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=restaurant_db
+DB_USERNAME=root
+DB_PASSWORD=
 
-SESSION_DRIVER=database
+SANCTUM_STATEFUL_DOMAINS=localhost:5173
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
