--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ DB_DATABASE=restaurant_db
 DB_USERNAME=root
 DB_PASSWORD=
 
+FRONTEND_URL=http://localhost:5173
 SANCTUM_STATEFUL_DOMAINS=localhost:5173
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
